5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1888_3177.log
== TEST (2019-07-09 16:09:01) 
-- CODE:
no = input("Digite: ")

a= 0
e= 0
i= 0
o= 0
u= 0

for i in no:
	if (no[i] == 'a'):
		a += 1
		
	elif (no[i] == 'e'):
		e += 1
		
	elif (no[i] == 'i'):
		i += 1
		
	elif (no[i] == 'o'):
		o += 1
		
	elif ( no[i] == 'u'):
		u += 1
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if (no[i] == 'a'):
TypeError: string indices must be integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:09:33) 
-- CODE:
no = input("Digite: ")

a= 0
e= 0
i= 0
o= 0
u= 0

for i in no:
	if (no[i] == 'a'):
		a += 1
		
	elif (no[i] == 'e'):
		e += 1
		
	elif (no[i] == 'i'):
		i += 1
		
	elif (no[i] == 'o'):
		o += 1
		
	elif ( no[i] == 'u'):
		u += 1
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if (no[i] == 'a'):
TypeError: string indices must be integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:10:17) 
-- CODE:
no = input("Digite: ")

a= 0
e= 0
i= 0
o= 0
u= 0

for i in no:
	if (no[i] == 'a'):
		a += 1
		
	elif (no[i] == 'e'):
		e += 1
		
	elif (no[i] == 'i'):
		i += 1
		
	elif (no[i] == 'o'):
		o += 1
		
	elif ( no[i] == 'u'):
		u += 1
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if (no[i] == 'a'):
TypeError: string indices must be integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:11:05) 
-- CODE:
no = input(str("Digite: ")):

a= 0
e= 0
i= 0
o= 0
u= 0

for i in no:
	if (no[i] == 'a'):
		a += 1
		
	elif (no[i] == 'e'):
		e += 1
		
	elif (no[i] == 'i'):
		i += 1
		
	elif (no[i] == 'o'):
		o += 1
		
	elif ( no[i] == 'u'):
		u += 1
		
print(a)

-- ERROR:
File "XXXX", line 1
    no = input(str("Digite: ")):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:11:15) 
-- CODE:
no = input(str("Digite: "))

a= 0
e= 0
i= 0
o= 0
u= 0

for i in no:
	if (no[i] == 'a'):
		a += 1
		
	elif (no[i] == 'e'):
		e += 1
		
	elif (no[i] == 'i'):
		i += 1
		
	elif (no[i] == 'o'):
		o += 1
		
	elif ( no[i] == 'u'):
		u += 1
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if (no[i] == 'a'):
TypeError: string indices must be integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:28:11) 
-- CODE:
from numpy import*

no = array(str(input("Digite: ")).lower()

a= 0
e= 0
i= 0
o= 0
u= 0

for i in no:
	if (no[i] == 'a'):
		a += 1
		
	elif (no[i] == 'e'):
		e += 1
		
	elif (no[i] == 'i'):
		i += 1
		
	elif (no[i] == 'o'):
		o += 1
		
	elif ( no[i] == 'u'):
		u += 1
		
print(a)

-- ERROR:
File "XXXX", line 5
    a= 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:28:22) 
-- CODE:
from numpy import*

no = array(str(input("Digite: "))).lower()

a= 0
e= 0
i= 0
o= 0
u= 0

for i in no:
	if (no[i] == 'a'):
		a += 1
		
	elif (no[i] == 'e'):
		e += 1
		
	elif (no[i] == 'i'):
		i += 1
		
	elif (no[i] == 'o'):
		o += 1
		
	elif ( no[i] == 'u'):
		u += 1
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:29:04) 
-- CODE:
from numpy import*

no = array(str(input("Digite: ")))

a= 0
e= 0
i= 0
o= 0
u= 0

for i in no:
	if (no[i] == 'a'):
		a += 1
		
	elif (no[i] == 'e'):
		e += 1
		
	elif (no[i] == 'i'):
		i += 1
		
	elif (no[i] == 'o'):
		o += 1
		
	elif ( no[i] == 'u'):
		u += 1
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:29:17) 
-- CODE:
from numpy import*

no = array(str(input("Digite: ")))

a= 0
e= 0
i= 0
o= 0
u= 0

for i in no:
	if (no[i] == 'a'):
		a += 1
		
	elif (no[i] == 'e'):
		e += 1
		
	elif (no[i] == 'i'):
		i += 1
		
	elif (no[i] == 'o'):
		o += 1
		
	elif ( no[i] == 'u'):
		u += 1
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:31:57) 
-- CODE:
from numpy import*

no = array(str(input("Digite: ")))

a= 0
e= 0
i= 0
o= 0
u= 0

for i in no:
	if (no[i] == 'a'):
		a += 1
		
	elif (no[i] == 'e'):
		e += 1
		
	elif (no[i] == 'i'):
		i += 1
		
	elif (no[i] == 'o'):
		o += 1
		
	elif ( no[i] == 'u'):
		u += 1
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:37:10) 
-- CODE:
from numpy import*

no = array(str(input("Digite: ")))

a= 0
e= 0
i= 0
o= 0
u= 0

for i in no:
	if (no[:-1] == 'a'):
		a += 1
		
	elif (no[i] == 'e'):
		e += 1
		
	elif (no[i] == 'i'):
		i += 1
		
	elif (no[i] == 'o'):
		o += 1
		
	elif ( no[i] == 'u'):
		u += 1
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:37:43) 
-- CODE:
from numpy import*

no = array(str(input("Digite: ")))

a= 0
e= 0
i= 0
o= 0
u= 0

for i in no:
	if (no[:-1] == 'a'):
		a += 1
		
	elif (no[:-1] == 'e'):
		e += 1
		
	elif (no[:-1] == 'i'):
		i += 1
		
	elif (no[:-1] == 'o'):
		o += 1
		
	elif ( no[:-1] == 'u'):
		u += 1
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:38:18) 
-- CODE:
from numpy import*

no = array(str(input("Digite: ")))

a= 0
e= 0
i= 0
o= 0
u= 0

for i in no[i]:
	if (no[:-1] == 'a'):
		a += 1
		
	elif (no[:-1] == 'e'):
		e += 1
		
	elif (no[:-1] == 'i'):
		i += 1
		
	elif (no[:-1] == 'o'):
		o += 1
		
	elif ( no[:-1] == 'u'):
		u += 1
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:38:26) 
-- CODE:
from numpy import*

no = array(str(input("Digite: ")))

a= 0
e= 0
i= 0
o= 0
u= 0

for i in no[i]:
	if (no[:-1] == 'a'):
		a += 1
		
	elif (no[:-1] == 'e'):
		e += 1
		
	elif (no[:-1] == 'i'):
		i += 1
		
	elif (no[:-1] == 'o'):
		o += 1
		
	elif ( no[:-1] == 'u'):
		u += 1
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:38:49) 
-- CODE:
from numpy import*

no = array(str(input("Digite: ")))

a= 0
e= 0
i= 0
o= 0
u= 0

for i in array(no[i]):
	if (no[:-1] == 'a'):
		a += 1
		
	elif (no[:-1] == 'e'):
		e += 1
		
	elif (no[:-1] == 'i'):
		i += 1
		
	elif (no[:-1] == 'o'):
		o += 1
		
	elif ( no[:-1] == 'u'):
		u += 1
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:39:00) 
-- CODE:
from numpy import*

no = array(str(input("Digite: ")))

a= 0
e= 0
i= 0
o= 0
u= 0

for i in array(no[i]):
	if (no[:-1] == 'a'):
		a += 1
		
	elif (no[:-1] == 'e'):
		e += 1
		
	elif (no[:-1] == 'i'):
		i += 1
		
	elif (no[:-1] == 'o'):
		o += 1
		
	elif ( no[:-1] == 'u'):
		u += 1
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:39:14) 
-- CODE:
from numpy import*

no = array(str(input("Digite: ")))

a= 0
e= 0
i= 0
o= 0
u= 0

for i in arange(no[i]):
	if (no[:-1] == 'a'):
		a += 1
		
	elif (no[:-1] == 'e'):
		e += 1
		
	elif (no[:-1] == 'i'):
		i += 1
		
	elif (no[:-1] == 'o'):
		o += 1
		
	elif ( no[:-1] == 'u'):
		u += 1
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:39:26) 
-- CODE:
from numpy import*

no = array(str(input("Digite: ")))

a= 0
e= 0
i= 0
o= 0
u= 0

for i in arange(no[i]):
	if (no[:-1] == 'a'):
		a += 1
		
	elif (no[:-1] == 'e'):
		e += 1
		
	elif (no[:-1] == 'i'):
		i += 1
		
	elif (no[:-1] == 'o'):
		o += 1
		
	elif ( no[:-1] == 'u'):
		u += 1
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:39:52) 
-- CODE:
from numpy import*

no = array(str(input("Digite: ")))

a= 0
e= 0
i= 0
o= 0
u= 0

for i in no[i]:
	if (no[:-1] == 'a'):
		a += 1
		
	elif (no[:-1] == 'e'):
		e += 1
		
	elif (no[:-1] == 'i'):
		i += 1
		
	elif (no[:-1] == 'o'):
		o += 1
		
	elif ( no[:-1] == 'u'):
		u += 1
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:39:59) 
-- CODE:
from numpy import*

no = array(str(input("Digite: ")))

a= 0
e= 0
i= 0
o= 0
u= 0

for i in no[i]:
	if (no[:-1] == 'a'):
		a += 1
		
	elif (no[:-1] == 'e'):
		e += 1
		
	elif (no[:-1] == 'i'):
		i += 1
		
	elif (no[:-1] == 'o'):
		o += 1
		
	elif ( no[:-1] == 'u'):
		u += 1
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
